# clr-profiler

./: .gitignore  Cargo.toml  LICENSE  README.md  test.sh
clr_profiler/: Cargo.toml
clr_profiler/src/: cil.rs  errors.rs  ffi.rs  lib.rs  profiler_info.rs  traits.rs  types.rs
clr_profiler/src/cil/: error.rs  instruction.rs  method.rs  notes.md  opcode.rs
clr_profiler/src/ffi/: class.rs  interface.rs
clr_profiler/src/traits/: cor_profiler_callback.rs  cor_profiler_callback_2.rs  cor_profiler_callback_3.rs  cor_profiler_callback_4.rs  cor_profiler_callback_5.rs  cor_profiler_callback_6.rs  cor_profiler_callback_7.rs  cor_profiler_callback_8.rs  cor_profiler_callback_9.rs  cor_profiler_info.rs  cor_profiler_info_9.rs
clr_profiler/tests/: basic_integration_test.rs
clr_profiler/tests/common/: mod.rs
clr_profiler_macros/: Cargo.toml
clr_profiler_macros/src/: lib.rs
samples/HelloWorld/: Program.cs
src/: class_factory.rs  errors.rs  ffi.rs  lib.rs  traits.rs  winapi.rs
src/ffi/: class.rs  class_factory.rs  cor_profiler_callback.rs  cor_profiler_info.rs  hresult.rs  i_unknown.rs  interface.rs  to_vtbl.rs
src/ffi/class/: class_factory.rs  cor_profiler_assembly_reference_provider.rs  cor_profiler_callback.rs  (+7 more)
src/traits/: cor_profiler_callback.rs  cor_profiler_callback_2.rs  cor_profiler_callback_3.rs  cor_profiler_callback_4.rs  cor_profiler_callback_5.rs  cor_profiler_callback_6.rs  cor_profiler_callback_7.rs  cor_profiler_callback_9.rs
test_clr/HelloWorld/: Program.cs
test_profilers/: Cargo.toml
test_profilers/src/: basic_integration_test.rs  lib.rs
(+49 files in other folders)
