[package]
name = "test_profilers"
version = "0.1.0"
authors = ["Camden Reslink <camdenreslink@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/camdenreslink/clr-profiler"

[dependencies]
clr_profiler = { version = "0.1.0", path = "../clr_profiler" }
uuid = "0.8"

[lib]
crate-type = ["cdylib"]

[features]
basic_integration_test = []